--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
    "name": "pretty-class",
-   "version": "1.0.4",
+   "version": "1.0.5",
    "author": "Naxrul Ahmed",
    "description": "A utility for generating CSS class names with ease.",
-   "main": "./index.js",
+   "main": "./cjs/index.js",
    "module": "./index.js",
    "types": "./index.d.ts",
    "type": "module",
@@ -15,7 +15,7 @@
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
-      "makepack": "^1.6.4",
+      "makepack": "^1.6.8",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
       "typescript": "^4.4.2"
@@ -29,5 +29,29 @@
    "repository": {
       "type": "git",
       "url": "https://github.com/yourusername/pretty-class.git"
+   },
+   "sideEffects": false,
+   "exports": {
+      ".": {
+         "require": {
+            "types": "./index.d.ts",
+            "default": "./cjs/index.js"
+         },
+         "import": {
+            "types": "./index.d.ts",
+            "default": "./index.js"
+         }
+      },
+      "./*": {
+         "require": {
+            "types": "./*.d.ts",
+            "default": "./cjs/*.js"
+         },
+         "import": {
+            "types": "./*.d.ts",
+            "default": "./*.js"
+         }
+      },
+      "./cjs": null
    }
 }
