--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
    "name": "pretty-class",
-   "version": "1.0.5",
+   "version": "1.0.6",
    "author": "Naxrul Ahmed",
    "description": "A utility for generating CSS class names with ease.",
-   "main": "./cjs/index.js",
-   "module": "./index.js",
+   "main": "./index.js",
+   "module": "./index.mjs",
    "types": "./index.d.ts",
    "type": "module",
    "scripts": {
@@ -15,10 +15,12 @@
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
-      "makepack": "^1.6.8",
+      "express": "^5.1.0",
+      "makepack": "^1.7.3",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
-      "typescript": "^4.4.2"
+      "typescript": "^4.4.2",
+      "vite": "^6.3.5"
    },
    "keywords": [
       "css",
@@ -30,28 +32,11 @@
       "type": "git",
       "url": "https://github.com/yourusername/pretty-class.git"
    },
-   "sideEffects": false,
    "exports": {
       ".": {
-         "require": {
-            "types": "./index.d.ts",
-            "default": "./cjs/index.js"
-         },
-         "import": {
-            "types": "./index.d.ts",
-            "default": "./index.js"
-         }
-      },
-      "./*": {
-         "require": {
-            "types": "./*.d.ts",
-            "default": "./cjs/*.js"
-         },
-         "import": {
-            "types": "./*.d.ts",
-            "default": "./*.js"
-         }
-      },
-      "./cjs": null
+         "import": "./index.mjs",
+         "require": "./index.js",
+         "types": "./index.d.ts"
+      }
    }
 }
