--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
-      "express": "^5.1.0",
-      "makepack": "^1.7.3",
+      "makepack": "^1.7.5",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
-      "typescript": "^4.4.2",
-      "vite": "^6.3.5"
+      "typescript": "^4.4.2"
    },
    "keywords": [
       "css",
